--- a/template.html
+++ b/template.html
@@ -4,6 +4,11 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Precios de la luz - <%= currentDate %></title>
+        <link rel="shortcut icon" href="<%= url %>/favicon.ico">
+        <link rel="apple-touch-icon" sizes="180x180" href="<%= url %>/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="<%= url %>/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="<%= url %>/favicon-16x16.png">
+        <link rel="manifest" href="<%= url %>/site.webmanifest">
         <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
         <style>
             body {
