--- a/template.html
+++ b/template.html
@@ -31,7 +31,7 @@
             }
             th,
             td {
-                padding: 12px;
+                padding: 0.75em 1em;
                 text-align: left;
                 width: 50%;
                 &:first-child {
