--- a/template.html
+++ b/template.html
@@ -92,6 +92,9 @@
                     <% }); %>
                 </tbody>
             </table>
+            <p>Fuente:
+                <a href="https://www.ree.es/">Red Eléctrica</a>
+            </p>
         </div>
         <script>
             const ctx = document.getElementById('priceChart');
