Add last updated time.

--- a/template.html
+++ b/template.html
@@ -72,7 +72,7 @@
     <body>
         <div class="container">
             <h1>Precios de la luz en España</h1>
-            <p>Fecha: <%= currentDate %></p>
+            <p>Fecha: <%= currentDate %> (Actualizado a las <%= currentTime %>)</p>
             <div class="chart-container">
                 <canvas id="priceChart"></canvas>
             </div>
